syntax = "proto3";
package slp.rpc.consume;

import "slp/plugin/option.proto";

import "rpc/consume/consume_money_message.proto";

/*
user_profile rpc 协议
*/

option go_package = "github.com/olaola-chat/slp-proto/rpcclient/consume";


service ConsumeMoney {
	option (slp.plugin.rbp_service).name = "Consume.Money";

	// 获取请求id
	rpc GetRequestId (slp.rpc.consume.GetRequestIdReq) returns (slp.rpc.consume.GetRequestIdRes);

	// 物品发放
	rpc CommoditySend (slp.rpc.consume.CommoditySendReq) returns (slp.rpc.consume.CommoditySendRes);
}


